# btools

./: .gitignore  AI_DOCS.md  README.md  requirements.txt  setup.cfg  setup.py  test_root_methods.py
.trae/documents/: 删除当前项目计划.md
btools/: __init__.py
btools/core/: __init__.py  appiumutils.py  excelhandler.py  http.py  logger.py  seleniumutils.py  testutils.py
btools/utils/: converter.py  validator.py
docs/guides/: dependency-notes.md  how-to-add-local-dependency.md  how-to-add-new-class.md  how-to-package.md
docs/usage/: assertenhancer.md  converter.md  csvhandler.md  httpclient.md  logger.md  playwrightutils.md  seleniumutils.md  validator.md
example/: http_login_example.py
test/: test_selenium_manager.py  test_testutils_fix.py
test/ai/: test_ai.py
test/api/: __init__.py  test_fastapiutils.py
test/automation/: test_fakerutils.py  test_seleniumutils.py  test_testutils.py
test/basic/: test_annotationutils.py  test_arrayutils.py  test_assertenhancer_merged.py  test_assertutils.py  test_beanutils.py  test_classutils.py  test_clipboardutils.py  test_collectionutils.py  test_convertutils.py  test_decoratorutils.py  test_decoratorutils_new.py  test_dictutils.py  test_enumutils.py  test_exceptionutils.py  test_htmlutils.py  test_mathutils.py  test_proxyutils.py  test_randomutils.py  test_reflectutils.py  test_resourceutils.py  test_runtimeutils.py  test_stringutils.py  test_typeutils.py  test_validatorutils.py
test/cache/: test_cache.py
test/config/: test_config.py  test_environmentutils.py  test_secretsutils.py
test/container/: test_dockerutils.py  (+1 more)
(+207 files in other folders)
