[metadata]
name = myutils
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = A collection of useful utility classes and functions
long_description = A collection of useful utility classes and functions for Python projects, including logging, configuration management, data validation, and type conversion.
long_description_content_type = text/markdown
url = https://example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.8
packages = find:
install_requires =
    pyyaml

[options.packages.find]
where = .
